Added inventory-ressource for events.
